fix chart alignment

--- a/style.css
+++ b/style.css
@@ -259,15 +259,8 @@ header h1 {
 }
 
 .container {
+  margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#view,
-#view2 {
   width: 100%;
-  height: 100%;
-  max-width: 60rem;
 }
